# container-watch

./: README.md  pyproject.toml  writeup.md
containerwatch/: __init__.py  __main__.py  checks.py  cli.py  output.py
examples/: sample_inspect.json
screenshots/: sample-run.txt
tests/: test_checks.py
